@@ -11,6 +11,7 @@ apt (0.9.5.2) UNRELEASED; urgency=low
     - print URIs for all changelogs in case of --print-uris,
       thanks to Daniel Hartwig for the patch! (Closes: #674897)
     - show 'bzr branch' as 'bzr get' is deprecated (LP: #1011032)
+    - check build-dep candidate if install is forbidden
   * debian/apt-utils.links:
     - the internal resolver 'apt' is now directly installed in
       /usr/lib/apt/solvers, so don't instruct dh to create a broken link
